# do-benchmark

./: CMakeLists.txt  README.md  x.sh
results/: outputSaxpy-O0-10000.txt  outputSaxpy-O0-cpuburn-nocachclean.txt  outputSaxpy-O0-cpuburn.txt  outputSaxpy-O0-nocpuburn-nocacheclean.txt  outputSaxpy-O3-10000.txt  outputSaxpy-O3-cpuburn-nocacheclean.txt  outputSaxpy-O3-cpuburn.txt  outputSaxpy-O3-nocpuburn-nocacheclean.txt  saxpy1000x.txt  saxpyOMP1000x.txt  saxpyOMP1x.txt
src/: CMakeLists.txt  Makefile  compileRun.sh  compileRunOMP.sh  extractInfo.awk  extractInfoSaxpy.awk  gfortran.sub  gfortran_omp.sub  mpi.sub  saxpy.F90  saxpy_omp.F90  tools.F90
src/compileRun/: compileRunMatVec.sh  compileRunSaxpy.sh
src/do-concurrent/: doconcurrent_1.f90
src/doConcurrent/: Makefile  dc1.F90  dc1.f90  dc2.F90  dc2.f90  dc3.F90
src/extract/: extractInfoRunMatrixVectorProduct.awk
src/math/: CMakeLists.txt  matrix_product.F90  saxpy.F90
src/math/matrix_product/: CMakeLists.txt
src/math/saxpy/: CMakeLists.txt  saxpy.F90  saxpy_omp.F90  saxpy_openacc.F90
src/test/: CMakeLists.txt  runMatrixMatrixProduct.F90  runMatrixVectorProduct.F90  runSaxpy.F90  runSaxpyOMP.F90  runSaxpyOpenACC.F90  saxpy_test.F90
