add_executable(saxpy.exe        runSaxpy.F90)
add_executable(saxpyOMP.exe     runSaxpyOMP.F90)
add_executable(saxpyOpenACC.exe runSaxpyOpenACC.F90)
target_link_libraries(saxpy.exe        benchmark_saxpy benchmark_tools)
target_link_libraries(saxpyOMP.exe     benchmark_saxpy benchmark_tools)
target_link_libraries(saxpyOpenACC.exe benchmark_saxpy benchmark_tools)
